--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#modules">CGW Institute Process</a>
+                        <a class="page-scroll" href="#modules">Paragon Club Formula</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Services</a>
@@ -44,10 +44,10 @@
     <header>
         <div class="container">
             <div class="intro-text">
-            <!--
+            
                 <div class="intro-lead-in">Welcome!</div>
                 <div class="intro-heading">Great Meeting You</div>
-             -->
+             
                 <a href="#modules" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
