--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Us</h2>
-                    <h3 class="section-subheading text-muted">Chartered Grant Writer Institute is an advocacy, skills training and professional certification, membership, and funding management platform. We specialize in developmental solutions for innovation-oriented SMEs.</h3>
+                    <h3 class="section-subheading text-muted">Paragon Club is an award-winning creator program for ads, books, film and TV. With data-science tools, we empower firms and professionals; to develop immersive narrative for deep engagement. Experts in business and psychology recommend stakeholder value chain as critical to growth. This worldview is the cornerstone of our program. </h3>
                 </div>
             </div>
 <!--
