--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Chartered Grant Writer (TM) Institute Process</h2>
-                    <h3 class="section-subheading text-muted">Each module is the building block of an elegant, technically complete business case application kit to achieve a high win probability.</h3>
+                    <h2 class="section-heading">Our Winning Formula</h2>
+                    <h3 class="section-subheading text-muted">Each module is the building block of an elegant, technically complete story arc to achieve a highly satisfying resolution.</h3>
                 </div>
             </div>
             <div class="row text-center">
