--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Our Winning Formula</h2>
-                    <h3 class="section-subheading text-muted">We employ learning engineering techniques for all-round, hands-on development that culminates in a market-ready product.</h3>
+                    <h3 class="section-subheading text-muted">We employ learning engineering for all-round, hands-on development that culminates in a market-ready product.</h3>
                 </div>
             </div>
             <div class="row text-center">
