--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -14,7 +14,7 @@
                         <i class="fa fa-bank fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Award-Winning Mentors</h4>
-                    <p class="text-muted">Explore the world of grants, and sponsorship, and find stakeholders appropriate for your organizational vision and mission.</p>
+                    <p class="text-muted">Our mentors are industry experts, accomplished storytellers with industry domain experience.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -22,7 +22,7 @@
                         <i class="fa fa-book fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Data Science Powered Hacks</h4>
-                    <p class="text-muted">Critically review the criteria set by the sponsoring organization, to ensure the development of a technically complete application kit.</p>
+                    <p class="text-muted">Data Science provides insights for crafting story arcs that contribute to satisfying resolutions.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -30,7 +30,7 @@
                         <i class="fa fa-gavel fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Instruction Design</h4>
-                    <p class="text-muted">Know the reviewers of the foundation, organization, or sponsor who have been bestowed with the responsibility of advancing the organizational mission by helping develop the finest applicants.</p>
+                    <p class="text-muted">Industry-relevance is critical for product success. We design curriculums from a knowledge repository of succesful products in the marketplace.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -38,7 +38,7 @@
                         <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Market-Ready Product</h4>
-                    <p class="text-muted">Remedy organizational deficiencies by partnering with industry experts.</p>
+                    <p class="text-muted">Timing is key, to stay ahead of the competition, whilst satisfying a market need.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -46,15 +46,15 @@
                         <i class="fa fa-question fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Peer-to-Peer Learning</h4>
-                    <p class="text-muted">Each sponsoring organization is on a mission to help the world make progress. Define the problem creatively, to advance the cause of the sponsor, and present an elegant solution for the challenge.</p>
+                    <p class="text-muted">Cohort-based learning speeds up the process, beyond case studies and experiments.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary" style="color:#8b008b"></i>
                         <i class="fa fa-trophy fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Small Cohort</h4>
-                    <p class="text-muted">Crafting narrative is like developing the season finale, for delighting the stakeholders with a storyline that builds up the climax, and concludes with a satisfying resolution.</p>
+                    <h4 class="service-heading">Small Cohorts</h4>
+                    <p class="text-muted">Whilst social learning is an evolving paradigm, small groups help mastery of subject matter. Our groups are limited to five.</p>
                 </div>
             </div>
         </div>
