--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -13,8 +13,8 @@
                         <i class="fa fa-circle fa-stack-2x text-primary" style="color:#708090"></i>
                         <i class="fa fa-bank fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Award-Winning Mentors</h4>
-                    <p class="text-muted">Our mentors are industry experts, accomplished storytellers with industry domain experience.</p>
+                    <h4 class="service-heading">Award-Winning Coaches</h4>
+                    <p class="text-muted">Our mentors are industry experts, accomplished storytellers from the industry.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -22,7 +22,7 @@
                         <i class="fa fa-book fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Data Science Powered Hacks</h4>
-                    <p class="text-muted">Data Science provides insights for crafting story arcs that contribute to satisfying resolutions.</p>
+                    <p class="text-muted">Data Science provides insights for crafting story arcs and characters that contribute to satisfying resolutions.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -30,7 +30,7 @@
                         <i class="fa fa-gavel fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Instruction Design</h4>
-                    <p class="text-muted">Industry-relevance is critical for product success. We design curriculums from a knowledge repository of succesful products in the marketplace.</p>
+                    <p class="text-muted">Industry-relevance is critical for product success. We design curriculums from a knowledge repository of blockbusters.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
