--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -38,7 +38,7 @@
                         <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Market-Ready Product</h4>
-                    <p class="text-muted">Timing is key, to stay ahead of the competition, whilst satisfying a market need.</p>
+                    <p class="text-muted">Since timing is key, to stay ahead of the competition, whilst satisfying a market need, we deploy data science hacks to identify novel opportunities.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -54,7 +54,7 @@
                         <i class="fa fa-trophy fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Small Cohorts</h4>
-                    <p class="text-muted">Whilst social learning is an evolving paradigm, small groups help mastery of subject matter. Our groups are limited to five.</p>
+                    <p class="text-muted">Whilst social learning is an evolving paradigm, our small groups (capped at five), expedite subject matter mastery.</p>
                 </div>
             </div>
         </div>
