--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -11,7 +11,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary" style="color:#708090"></i>
-                        <i class="fa fa-bank fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-trophy fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Award-Winning Coaches</h4>
                     <p class="text-muted">Our mentors are industry experts, accomplished storytellers from the industry.</p>
@@ -19,7 +19,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary" style="color:#8b0000"></i>
-                        <i class="fa fa-book fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-info fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Data Science Powered Hacks</h4>
                     <p class="text-muted">Data Science provides insights for crafting story arcs and characters that contribute to satisfying resolutions.</p>
@@ -27,7 +27,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary" style="color:#008b8b"></i>
-                        <i class="fa fa-gavel fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-book fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Instruction Design</h4>
                     <p class="text-muted">Industry-relevance is critical for product success. We design curriculums from a knowledge repository of blockbusters.</p>
@@ -51,7 +51,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary" style="color:#8b008b"></i>
-                        <i class="fa fa-trophy fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Small Cohorts</h4>
                     <p class="text-muted">Whilst social learning is an evolving paradigm, our small groups (capped at five), expedite subject matter mastery.</p>
