--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/cgw_certificate.png" class="img-responsive img-centered" alt="">
+                        <img src="img/la_certificate.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
