--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Winning Formula</h2>
-                    <h3 class="section-subheading text-muted">We employ learning engineering for all-round, hands-on development that culminates in a market-responsive product.</h3>
+                    <h2 class="section-heading">Our Worldview</h2>
+                    <h3 class="section-subheading text-muted">We believe Carbonomics is core enabler of the Zero Carbon future.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -13,7 +13,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary" style="color:#708090"></i>
                         <i class="fa fa-trophy fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Award-Winning Coaches</h4>
+                    <h4 class="service-heading">Carbon Economics</h4>
                     <p class="text-muted">Our mentors are industry experts, accomplished storytellers from the industry.</p>
                 </div>
                 <div class="col-md-4">
@@ -21,7 +21,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary" style="color:#8b0000"></i>
                         <i class="fa fa-info fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Data Science Powered Hacks</h4>
+                    <h4 class="service-heading">Data Science Hacks</h4>
                     <p class="text-muted">Data Science provides insights for crafting story arcs and characters that contribute to satisfying resolutions.</p>
                 </div>
                 <div class="col-md-4">
@@ -29,7 +29,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary" style="color:#008b8b"></i>
                         <i class="fa fa-book fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Instruction Design</h4>
+                    <h4 class="service-heading">Decision Science AI</h4>
                     <p class="text-muted">Industry-relevance is critical for product success. We design curriculums from a knowledge repository of blockbusters.</p>
                 </div>
                 <div class="col-md-4">
@@ -37,7 +37,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary" style="color:#8b8b00"></i>
                         <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Market-Ready Product</h4>
+                    <h4 class="service-heading">Deep Innovation</h4>
                     <p class="text-muted">Since timing is key, to stay ahead of the competition, whilst satisfying a market need, we deploy data science hacks to identify novel opportunities.</p>
                 </div>
                 <div class="col-md-4">
@@ -45,7 +45,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary" style="color:#ffa500"></i>
                         <i class="fa fa-question fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Peer-to-Peer Learning</h4>
+                    <h4 class="service-heading">Peer-to-Peer Economy</h4>
                     <p class="text-muted">Cohort-based learning speeds up the process, beyond case studies and experiments.</p>
                 </div>
                 <div class="col-md-4">
@@ -53,7 +53,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary" style="color:#8b008b"></i>
                         <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Small Cohorts</h4>
+                    <h4 class="service-heading">Systems Engineering</h4>
                     <p class="text-muted">Whilst social learning is an evolving paradigm, our small groups (capped at five), expedite subject matter mastery.</p>
                 </div>
             </div>
