--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Our Worldview</h2>
-                    <h3 class="section-subheading text-muted">We believe Carbonomics is core enabler of the Zero Carbon future.</h3>
+                    <h3 class="section-subheading text-muted">We believe Carbonomics is a core enabler of our Zero Carbon future.</h3>
                 </div>
             </div>
             <div class="row text-center">
