--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Services</h2>
-                    <h3 class="section-subheading text-muted">We serve firms and professionals in high-growth markets.</h3>
+                    <h2 class="section-heading">Our Products</h2>
+                    <h3 class="section-subheading text-muted">We serve firms and professionals in high-growth, climate change markets.</h3>
                 </div>
             </div>
             <div class="row">
