--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Our Worldview</h2>
-                    <h3 class="section-subheading text-muted">We believe Carbonomics is a core enabler of our Zero Carbon future.</h3>
+                    <h3 class="section-subheading text-muted">Carbonomics is a core enabler of our Zero Carbon future.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -14,15 +14,15 @@
                         <i class="fa fa-trophy fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Carbon Economics</h4>
-                    <p class="text-muted">Our mentors are industry experts, accomplished storytellers from the industry.</p>
+                    <p class="text-muted">Organizations can no longer be carbon-inefficient, and, yet be productive. Carbon management is a business value chain imperative.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary" style="color:#8b0000"></i>
                         <i class="fa fa-info fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Data Science Hacks</h4>
-                    <p class="text-muted">Data Science provides insights for crafting story arcs and characters that contribute to satisfying resolutions.</p>
+                    <h4 class="service-heading">Data Science</h4>
+                    <p class="text-muted">Every organization must engineer its North Star by deploying data science hacks.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -30,7 +30,7 @@
                         <i class="fa fa-book fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Decision Science AI</h4>
-                    <p class="text-muted">Industry-relevance is critical for product success. We design curriculums from a knowledge repository of blockbusters.</p>
+                    <p class="text-muted">AI tools can help firms navigate through pesky decisions, ranging from product innovation to regulatory frameworks. </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -38,7 +38,7 @@
                         <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Deep Innovation</h4>
-                    <p class="text-muted">Since timing is key, to stay ahead of the competition, whilst satisfying a market need, we deploy data science hacks to identify novel opportunities.</p>
+                    <p class="text-muted">From plant processes to supply chains and logistics, automation and robotics could boost productivity manifold.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -46,7 +46,7 @@
                         <i class="fa fa-question fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Peer-to-Peer Economy</h4>
-                    <p class="text-muted">Cohort-based learning speeds up the process, beyond case studies and experiments.</p>
+                    <p class="text-muted">Close integration of networks and business processes could be a Zero Carbon game changer.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -54,7 +54,7 @@
                         <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Systems Engineering</h4>
-                    <p class="text-muted">Whilst social learning is an evolving paradigm, our small groups (capped at five), expedite subject matter mastery.</p>
+                    <p class="text-muted">Codifying business processes with a dynamic feedback loop are engineering systems of the future.</p>
                 </div>
             </div>
         </div>
