--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -30,7 +30,7 @@
                         <i class="fa fa-book fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Decision Science AI</h4>
-                    <p class="text-muted">AI tools can help firms navigate through pesky decisions, ranging from product innovation to regulatory frameworks. </p>
+                    <p class="text-muted">AI tools help firms navigate through pesky decisions, ranging from product innovation to regulatory frameworks.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
