--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#modules">Our Winning Formula</a>
+                        <a class="page-scroll" href="#modules">Why Carbonomics</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Services</a>
@@ -28,7 +28,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Team</a>
+                        <a class="page-scroll" href="#team">Leadership</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
