--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -54,7 +54,7 @@
                         <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Systems Engineering</h4>
-                    <p class="text-muted">Codifying business processes with a dynamic feedback loop are engineering systems of the future.</p>
+                    <p class="text-muted">Codifying business processes with dynamic feedback loops are engineering systems of the future.</p>
                 </div>
             </div>
         </div>
