--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -14,7 +14,7 @@
                         <i class="fa fa-trophy fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Carbon Economics</h4>
-                    <p class="text-muted">Organizations can no longer be carbon-inefficient, and, yet be productive. Carbon management is a business imperative.</p>
+                    <p class="text-muted">Organizations can no longer be carbon-inefficient, and, yet, be productive. Carbon management is a business imperative.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
