--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -46,7 +46,7 @@
                         <i class="fa fa-question fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Peer-to-Peer Economy</h4>
-                    <p class="text-muted">Close integration of networks and business processes is a Zero Carbon game changer.</p>
+                    <p class="text-muted">Close integration of business processes, networks and stakeholders is a Zero Carbon game changer.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
