--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -11,7 +11,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary" style="color:#708090"></i>
-                        <i class="fa fa-trophy fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-piggy-bank fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Carbon Economics</h4>
                     <p class="text-muted">Organizations can no longer be carbon-inefficient, and, yet, be productive. Carbon management is a business imperative.</p>
@@ -19,7 +19,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary" style="color:#8b0000"></i>
-                        <i class="fa fa-info fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-microscope fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Data Science</h4>
                     <p class="text-muted">Every organization must engineer its North Star with data science hacks.</p>
@@ -27,7 +27,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary" style="color:#008b8b"></i>
-                        <i class="fa fa-book fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-calculator fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Decision Science AI</h4>
                     <p class="text-muted">AI tools help firms navigate through pesky decisions, ranging from product innovation to regulatory frameworks.</p>
@@ -35,7 +35,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary" style="color:#8b8b00"></i>
-                        <i class="fa fa-users fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-code fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Deep Innovation</h4>
                     <p class="text-muted">From plant processes to supply chains and logistics, automation and robotics give productivity a turbo boost.</p>
@@ -43,7 +43,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary" style="color:#ffa500"></i>
-                        <i class="fa fa-question fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Peer-to-Peer Economy</h4>
                     <p class="text-muted">Close integration of business processes, networks and stakeholders is a Zero Carbon game changer.</p>
@@ -51,7 +51,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary" style="color:#8b008b"></i>
-                        <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Systems Engineering</h4>
                     <p class="text-muted">Codifying business processes with dynamic feedback loops are engineering systems of the future.</p>
