--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -11,7 +11,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary" style="color:#708090"></i>
-                        <i class="fa fa-chart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-lightbulb fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Carbon Economics</h4>
                     <p class="text-muted">Organizations can no longer be carbon-inefficient, and, yet, be productive. Carbon management is a business imperative.</p>
@@ -19,7 +19,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary" style="color:#8b0000"></i>
-                        <i class="fa fa-award fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-certificate fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Data Science</h4>
                     <p class="text-muted">Every organization must engineer its North Star with data science hacks.</p>
