--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Us</h2>
-                    <h3 class="section-subheading text-muted">Paragon Club is an award-winning creator school for ads, books, film and TV. With data science tools, we empower firms and professionals; to develop immersive narrative for deep engagement. Experts in business and psychology recommend stakeholder value chain as critical for growth. This worldview is the cornerstone of our platform. </h3>
+                    <h3 class="section-subheading text-muted">Carbonomics AI aspires to become a valuable stakeholder of the Zero Carbon worldview, with data science and deep tech innovation. Managing carbon is no longer an option, but the worldview is an economic necessity, so every world economy has a fair shot at sustainable development. Our award-winning leaders live the green dream, which not only contributes to productive gains but also enables purposeful lifestyle outcomes.</h3>
                 </div>
             </div>
 <!--
