--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Us</h2>
-                    <h3 class="section-subheading text-muted">Carbonomics AI aspires to become a valuable stakeholder of the Zero Carbon worldview, with data science and deep tech innovation. Managing carbon is no longer an option, but the worldview is an economic necessity, so every world economy has a fair shot at sustainable development. Our award-winning leaders live the green dream, which not only contributes to productive gains but also enables purposeful lifestyle outcomes.</h3>
+                    <h3 class="section-subheading text-muted">Carbonomics AI aspires to become a valuable stakeholder of the Zero Carbon worldview, with data science and deep tech innovation. Carbon management is no longer an option, but the evolving economic paradigm is a necessity, so every world economy has a fair shot at sustainable development. Our award-winning leaders live the green dream, which not only contributes to productive gains but also enables purposeful lifestyle outcomes.</h3>
                 </div>
             </div>
 <!--
