--- a/_includes/team.html
+++ b/_includes/team.html
@@ -30,7 +30,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">We are committed to helping businesses and professionals enjoy accolades by mastering the art of narrative.</p>
+                    <p class="large text-muted">We are committed to the Net Zero Carbon dream by empowering the stakeholder community with knowledge, practices and tools.</p>
                 </div>
             </div>
         </div>
