--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -38,7 +38,7 @@
                         <i class="fa fa-code fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Deep Innovation</h4>
-                    <p class="text-muted">From plant processes to supply chains and logistics, automation and robotics give productivity a turbo boost.</p>
+                    <p class="text-muted">From plant processes to supply chains and logistics, automation and robotics provide a turbo boost to productive outcomes.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
