--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Worldview</h2>
+                    <h2 class="section-heading">Carbon Management & Trading Credits</h2>
                     <h3 class="section-subheading text-muted">Carbonomics is a core enabler of our Zero Carbon future.</h3>
                 </div>
             </div>
@@ -14,7 +14,7 @@
                         <i class="fa fa-fire fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Carbon Economics</h4>
-                    <p class="text-muted">Organizations can no longer be carbon-inefficient, and, yet, be productive. Carbon management is a business imperative.</p>
+                    <p class="text-muted">Organizations can no longer be carbon-inefficient, and, yet, be productive. Whilst carbon management is a business imperative, trading credits helps close the Net Zero Carbon loop by balancing the disparities.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
