--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -22,7 +22,7 @@
                         <i class="fa fa-certificate fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Data Science</h4>
-                    <p class="text-muted">Every organization must engineer its North Star with data science hacks.</p>
+                    <p class="text-muted">Every organization must find its North Star, by engineering its carbon footprint with data science hacks.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
