--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Carbonomics</h2>
-                    <h3 class="section-subheading text-muted">Carbon management and trading credits are core enablers of our Zero Carbon future.</h3>
+                    <h3 class="section-subheading text-muted">Carbon management and financial innovation are core enablers of our Zero Carbon future.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -14,7 +14,7 @@
                         <i class="fa fa-fire fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Carbon Economics</h4>
-                    <p class="text-muted">Whilst carbon management is a business imperative, trading credits helps close the Net Zero loop by balancing the disparities.</p>
+                    <p class="text-muted">Whilst carbon management is a business imperative, first-principles design helps close the Net Zero loop with product economics.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -38,7 +38,7 @@
                         <i class="fa fa-code fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Deep Innovation</h4>
-                    <p class="text-muted">From plant processes to supply chains and logistics, automation and robotics provide a turbo boost to productive outcomes.</p>
+                    <p class="text-muted">From plant processes to supply chains and logistics, next-gen innovations provide a turbo boost to productive outcomes.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
