--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Us</h2>
-                    <h3 class="section-subheading text-muted">As a valuable stakeholder of our Zero Carbon future, Carbonomics AI employs data science and deep innovation to achieve feather-weight carbon footprints in next-gen products. Low-carbon is no longer an option, but the evolving economic paradigm is a necessity, so every world economy has a fair shot at sustainable development. Our award-winning leaders are living the green dream, which not only contributes to productive gains but also enables purposeful lifestyle outcomes.</h3>
+                    <h3 class="section-subheading text-muted">As a valuable stakeholder of our low-carbon future, Carbonomics AI employs data science and deep innovation to achieve feather-weight carbon footprints in next-gen products. Low-carbon is no longer an option, but the evolving economic paradigm is a necessity, so every world economy has a fair shot at sustainable development. Our award-winning leaders are living the green dream, which not only contributes to productive gains but also enables purposeful lifestyle outcomes.</h3>
                 </div>
             </div>
 <!--
