--- a/_includes/team.html
+++ b/_includes/team.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Award-Winning Professionals</h3>
+                    <h3 class="section-subheading text-muted">Award-winning Professionals</h3>
                 </div>
             </div>
             <div class="row">
@@ -30,7 +30,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">We are committed to the Net Zero Carbon dream by empowering the stakeholder community with knowledge, practices and tools.</p>
+                    <p class="large text-muted">We are committed to the net-zero carbon dream by empowering the stakeholder community with knowledge, practices and tools.</p>
                 </div>
             </div>
         </div>
