--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -14,7 +14,7 @@
                         <i class="fa fa-fire fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Carbon Economics</h4>
-                    <p class="text-muted">Whilst carbon management is a business imperative, first-principles design helps close the Net Zero loop with product economics.</p>
+                    <p class="text-muted">Whilst carbon management is a business imperative, first-principles design helps close the loop with product economics.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
